# cotabox-challenge

./: README.md  docker-compose.yaml
backend/: .gitignore  Dockerfile  pyproject.toml
backend/participants/: models.py  routers.py  serializers.py  views.py
backend/participants/migrations/: 0001_initial.py
backend/setup/: settings.py  urls.py
backend/tests/participants/: factories.py  test_endpoints.py  test_models.py  test_serializers.py
participation-form/: .eslintrc.cjs  Dockerfile  README.md  index.html  package-lock.json  package.json  tailwind.config.js
participation-form/nginx/: nginx.conf
participation-form/src/: App.vue  main.js
participation-form/src/assets/: main.css
participation-form/src/components/: DataForm.vue  DataTable.vue  LoginForm.vue  RegisterForm.vue
